# cmake-cookbook

./: .circleci.lnk  .git.lnk  .github.lnk  .vscode.lnk
chapter-01/recipe-01/c-example/: CMakeLists.txt  hello-world.cpp
chapter-01/recipe-03/cxx-example/: CMakeLists.txt  hello-world.cpp
chapter-01/recipe-04/cxx-example/: CMakeLists.txt  Message.hpp
chapter-01/recipe-05/cxx-example/: Message.cpp
chapter-01/recipe-07/example/: CMakeLists.txt
chapter-01/recipe-08/cxx-example/: CMakeLists.txt
chapter-01/recipe-09/cxx-example/: CMakeLists.txt  animal-farm.cpp
chapter-01/recipe-10/cxx-example/: CMakeLists.txt  compute-areas.cpp  geometry_circle.cpp  geometry_circle.hpp
chapter-02/recipe-01/example/: CMakeLists.txt
chapter-02/recipe-02/cxx-example/: CMakeLists.txt
chapter-02/recipe-03/cxx-example/: CMakeLists.txt  hello-world.cpp
chapter-02/recipe-04/cxx-example/: CMakeLists.txt  arch-dependent.cpp
